--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
-<head>
-    <script type="text/javascript" src="./index.js"></script>
+<!DOCTYPE html><html lang='en' class=''>
+  <head>
+    <script src="./index.js"></script>
     <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <div class="window" id="w1">
-        <div class="centeredText">Hello World</div>
-    </div>
-    <div class="window collapsed" id="w2">
-        <div class="centeredText">Hello Moon</div>
-    </div>
-    <div class="window collapsed" id="w3">
-        <div class="centeredText">Goodnight World</div>
-    </div>
-    <div class="window collapsed" id="w4">
-        <div class="centeredText">Goodnight Moon</div>
-    </div>
-</body>
+    <style></style>
+  </head>
+  <body>
+      <div class="window" id="w2">
+        <div class="centeredContent">
+          Goodnight Moon
+        </div>
+      </div>
+      <div class="window" id="w1">
+          <div class="centeredContent">
+            Hello World
+          </div>
+      </div>
+  </body>
+</html>
