--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
           <div class="centeredContent">
             Hello World
           </div>
+          <img class="cloud" src="./cloud.svg" style="top: 10%;"></img>
+          <img class="cloud" src="./cloud.svg" style="top: 25%; animation-delay: 5s"></img>
+          <img class="cloud" src="./cloud.svg" style="top: 60%; animation-delay: 9s"></img>
+          <img class="cloud" src="./cloud.svg" style="top: 70%; animation-delay: 2s"></img>
       </div>
   </body>
 </html>
