--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang='en' class=''>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <head>
     <script src="./index.js"></script>
     <link rel="stylesheet" href="./style.css">
